--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
                     <img src="assets/img/work1.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="#" class="portfolio__link-name">View details</a>
+                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='1'>View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
                     <img src="assets/img/work2.jpg" alt="">
 
                     <div class="portfolio__link">
-                        <a href="#" class="portfolio__link-name">View details</a>
+                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='2'>View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
@@ -184,11 +184,39 @@
                 </form>
             </div>
         </section>
+        <section class="modal" data-animation="slideInOutDown">
+            <div class="modal__content">
+                <div class="modal__close"><i class='bx bx-x'></i></div>
+                <div class="modal__banner">
+                    <img src="./assets/img/undraw_posting_photo_v65l.png" alt="">
+                </div>
+                <div class="modal__description">
+                    <h3>This is Title Description</h3>
+                    <div class="modal__text">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis quam, quas quo eligendi dolorem dolorum ea sint corporis. Consectetur suscipit ad magni itaque deleniti architecto nisi modi deserunt ut tempore.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus assumenda nesciunt tenetur incidunt impedit commodi eligendi, perferendis harum quae aliquid alias neque natus non? Unde voluptatum perferendis accusantium doloremque sequi!</p>
+                        <ul>
+                            <li>- Satu</li>
+                            <li>- Dua</li>
+                            <li>- Tiga</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="modal__footer">
+                    <a href="#" target="_blank">
+                        <i class='bx bx-globe'></i>
+                        www.bla-bla.co.id
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
     <!--===== SCROLL REVEAL =====-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!--===== MAIN JS =====-->
     <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/addOns.js"></script>
 </body>
 </html>
