--- a/index.html
+++ b/index.html
@@ -112,42 +112,42 @@
 
             <div class="portfolio__container bd-grid">
                 <div class="portfolio__img">
-                    <img src="assets/img/work1.jpg" alt="">
-
-                    <div class="portfolio__link">
-                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='1'>View details</a>
-                    </div>
-                </div>
-                <div class="portfolio__img">
-                    <img src="assets/img/work2.jpg" alt="">
+                    <img src="./assets/img/mini.png" alt="">
 
                     <div class="portfolio__link">
                         <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='2'>View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="assets/img/work3.jpg" alt="">
+                    <img src="assets/img/bmw-indo.png" alt="">
 
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="assets/img/work4.jpg" alt="">
+                    <img src="assets/img/deva_auto_logo.png" alt="">
+
+                    <div class="portfolio__link">
+                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='1'>View details</a>
+                    </div>
+                </div>
+                <div class="portfolio__img">
+                    <object data="./assets/img/hris.svg" width="230"></object>
 
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="assets/img/work5.jpg" alt="">
+                    <img src="assets/img/toyota.png" alt="">
 
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="assets/img/work6.jpg" alt="">
+                    <img src="assets/img/bodypaint.png" alt="">
 
                     <div class="portfolio__link">
                         <a href="#" class="portfolio__link-name">View details</a>
