--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div>
                     <h2 class="about__subtitle">I'am Yoyok</h2>
                     <span class="about__profession">Web Developer</span>
-                    <p class="about__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci consectetur, architecto quas fugiat, iste inventore facere repellendus delectus id, vitae blanditiis.</p>
+                    <p class="about__text">IT profesional yang berpengalaman lebih dari 4 tahun dengan spesialisasi di bidang Web Development pada perusahaan sektor perdagangan dan telekomunikasi.</p>
 
                     <div class="about__social">
                         <a href="#" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
