--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 <div>
                     <h2 class="about__subtitle">I'am Yoyok</h2>
                     <span class="about__profession">Web Developer</span>
-                    <p class="about__text">IT profesional yang berpengalaman lebih dari 4 tahun dengan spesialisasi di bidang Web Development pada perusahaan sektor perdagangan dan telekomunikasi.</p>
+                    <p class="about__text">IT profesional yang berpengalaman lebih dari 5 tahun dengan spesialisasi di bidang Web Development pada perusahaan sektor Perdagangan, Telekomunikasi, Automotive.</p>
 
                     <div class="about__social">
-                        <a href="#" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
+                        <a href="https://www.linkedin.com/in/yoyok-waluyo-b07670156/" class="about__social-icon" target="_blank"><i class='bx bxl-linkedin' ></i></a>
                         <a href="#" class="about__social-icon"><i class='bx bxl-github' ></i></a>
                         <a href="#" class="about__social-icon"><i class='bx bxl-dribbble' ></i></a>
                     </div>
@@ -91,10 +91,13 @@
                     <span class="skills__name">Codeigniter</span>
                     <span class="skills__name">Angular</span>
                     <span class="skills__name">Vue</span>
+                    <span class="skills__name">Google Script</span>
                     
                     <h3 class="skills__subtitle">Design</h3>
                     <span class="skills__name">Css</span>
                     <span class="skills__name">Scss</span>
+                    <span class="skills__name">Bootstrap</span>
+                    <span class="skills__name">Tailwind</span>
 
                     <h3 class="skills__subtitle">Mobile</h3>
                     <span class="skills__name">Flutter</span>
@@ -119,7 +122,7 @@
                     </div>
                 </div>
                 <div class="portfolio__img">
-                    <img src="assets/img/bmw-indo.png" alt="">
+                    <img src="assets/img/bmw-indo.png" alt="" style="max-width: 130px;">
 
                     <div class="portfolio__link">
                         <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='bmw'>View details</a>
@@ -130,13 +133,6 @@
 
                     <div class="portfolio__link">
                         <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='deva'>View details</a>
-                    </div>
-                </div>
-                <div class="portfolio__img">
-                    <object data="./assets/img/hris.svg" width="230"></object>
-
-                    <div class="portfolio__link">
-                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='hris'>View details</a>
                     </div>
                 </div>
                 <div class="portfolio__img">
@@ -151,6 +147,27 @@
 
                     <div class="portfolio__link">
                         <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='bpaint'>View details</a>
+                    </div>
+                </div>
+                <div class="portfolio__img">
+                    <object data="./assets/img/hris.svg" width="230"></object>
+
+                    <div class="portfolio__link">
+                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='hris'>View details</a>
+                    </div>
+                </div>
+                <div class="portfolio__img">
+                    <img src="./assets/img/kinto-logo.png" alt="">
+
+                    <div class="portfolio__link">
+                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='kinto'>View details</a>
+                    </div>
+                </div>
+                <div class="portfolio__img">
+                    <img src="./assets/img/tcash.png" alt="">
+
+                    <div class="portfolio__link">
+                        <a class="portfolio__link-name" onclick="addOns.showModal(this);" data-isi='tcash'>View details</a>
                     </div>
                 </div>
             </div>
